# LCOpenGLES

./: settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lc/les/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cube_image_f.glsl  cube_image_v.glsl  cube_v.glsl  loadImage_fragment.glsl  loadImage_vertex.glsl  rectangle_vertex.glsl  transition_left_to_right_f.glsl  transition_leftbottom_to_righttop_f.glsl  transition_leftbottom_to_righttop_v.glsl  transition_right_to_left_f.glsl  triangle_vertex.glsl
app/src/main/cpp/: LCFrameBufferObject.cpp  LCFrameBufferObject.h  LCGLCommonDef.h  LCGLTexture.cpp  LCGLTexture.h  LCImage.cpp  LCImage.h  LCNDKLogDef.h  LCOpenGLBuffer.cpp  LCOpenGLBuffer.h  LCOpenGLRender.cpp  LCOpenGLShader.cpp  LCOpenGLShader.h  LCOpenGLVAO.cpp  LCOpenGLVAO.h  com_lc_les_LCGLRender.h
app/src/main/cpp/sample/: CubeImageSample.cpp  CubeImageSample.h  CubeSample.cpp  CubeSample.h  LoadImageSample.cpp  LoadImageSample.h  RectangleSample.cpp  RectangleSample.h  TransitionL2RSample.cpp  TransitionL2RSample.h  TransitionSample.cpp  TransitionSample.h  TriangleSample.cpp  TriangleSample.h
app/src/main/java/com/lc/les/: LCGLRender.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lc/les/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
